# qrz-xml

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: basic_lookup.rs  bulk_lookup.rs  dxcc_lookup.rs  persist_session.rs
src/: client.rs  error.rs  lib.rs  types.rs
tests/: integration_tests.rs
